[package]
name = "rust_imgui_sdl"
version = "0.1.0"
authors = ["Noah Ryan <noah.m.ryan@nasa.gov>"]

[dependencies]
imgui-sdl2 = "0.3.1"
imgui = "0.0.21"
sdl2 = "0.32.1"
gl = "0.10.0"
imgui-opengl-renderer = "0.3"

bytes = "0.4"
byteorder = "1.2"

num        = "0.2"
num-traits = "0.2"
num-derive = "0.2"

serde        = "1.0"
serde_json   = "1.0"
serde_derive = "1.0"

log = "0.4"
simplelog = "^0.5.0"

chrono = "0.4"

floating-duration = "0.1"

structopt = "0.2"

ccsds_primary_header="0.4"
