[package]
name = "ccsds_router"
version = "0.1.0"
authors = ["Noah Ryan <nsmryan@gmail.com>"]

[dependencies]
imgui-sdl2 = "0.3.1"
imgui = "0.0.21"
sdl2 = "0.32.1"
gl = "0.10.0"
imgui-opengl-renderer = "0.3"
# imgui-ext = "0.1"

bytes = "0.4"
byteorder = "1.2"

num        = "0.2"
num-traits = "0.2"
num-derive = "0.2"

serde        = "1.0"
serde_json   = "1.0"
serde_derive = "1.0"

log = "0.4"
simplelog = "^0.5.0"

chrono = "0.4"

floating-duration = "0.1"

structopt = "0.2"

hexdump = "0.1"

itertools = "0.8"

ctrlc = "3.1"

ccsds_primary_header="0.10.2"
